Parallax Removed due to issues. Results added. Detail view in results yet to be done

--- a/Revels'15/Base.lproj/Main.storyboard
+++ b/Revels'15/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tCB-MB-hWX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tCB-MB-hWX">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -25,6 +25,7 @@
                     <connections>
                         <segue destination="tFC-t3-AYJ" kind="presentation" identifier="showInstafeed" id="Vrc-gg-HJa"/>
                         <segue destination="5mo-1N-YJh" kind="presentation" identifier="follow" id="9gs-sY-KBn"/>
+                        <segue destination="rNY-5q-xnG" kind="presentation" identifier="showResults" id="CdE-Te-6A5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
