--- a/Revels'15/CellOptionView.xib
+++ b/Revels'15/CellOptionView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -16,7 +16,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="310" height="62"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="1xW-Q3-XsS">
-                            <rect key="frame" x="8" y="20" width="294" height="21"/>
+                            <rect key="frame" x="8" y="14" width="294" height="34"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="22"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -24,10 +24,10 @@
                     </subviews>
                     <color key="backgroundColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="top" secondItem="KvY-uW-dkM" secondAttribute="top" constant="20" id="17k-Ng-lEh"/>
-                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailingMargin" id="Gei-Q1-Ec1"/>
-                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leadingMargin" id="Ysu-kK-m3y"/>
-                        <constraint firstAttribute="bottom" secondItem="1xW-Q3-XsS" secondAttribute="bottom" constant="21" id="ab4-Cu-8DV"/>
+                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="top" secondItem="KvY-uW-dkM" secondAttribute="top" constant="14" id="7Sd-Et-smN"/>
+                        <constraint firstAttribute="bottom" secondItem="1xW-Q3-XsS" secondAttribute="bottom" constant="14" id="KOt-Ag-Jhm"/>
+                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailingMargin" id="MdB-Ia-3eJ"/>
+                        <constraint firstItem="1xW-Q3-XsS" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leadingMargin" id="YjK-T6-Wz9"/>
                     </constraints>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="YOLOSWAG" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9Hg-Lc-7yX">
@@ -42,7 +42,7 @@
                     <rect key="frame" x="37" y="336" width="237" height="40"/>
                     <color key="backgroundColor" red="0.1450980392" green="0.63921568630000003" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="3RY-k9-q6E"/>
+                        <constraint firstAttribute="height" constant="40" id="tI7-w2-8Qd"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                     <state key="normal" title="ADD TO FOLLOWING">
@@ -53,17 +53,17 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="9Hg-Lc-7yX" secondAttribute="trailing" id="8KM-VO-CeB"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" constant="37" id="CxP-et-aCO"/>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leading" id="FXG-nU-hD9"/>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" constant="61" id="O5i-Je-mEA"/>
-                <constraint firstItem="KvY-uW-dkM" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" id="OIh-Yt-nXz"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="bottom" secondItem="IG8-OH-BQd" secondAttribute="bottomMargin" id="SW1-DJ-Ebl"/>
-                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="Tgk-WE-Ywq"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="centerX" secondItem="9Hg-Lc-7yX" secondAttribute="centerX" id="bkJ-3k-Gyh"/>
-                <constraint firstItem="krZ-F2-PED" firstAttribute="top" secondItem="9Hg-Lc-7yX" secondAttribute="bottom" constant="14" id="lfq-SW-lSb"/>
-                <constraint firstAttribute="bottom" secondItem="KvY-uW-dkM" secondAttribute="bottom" constant="322" id="mIc-At-lvQ"/>
-                <constraint firstItem="KvY-uW-dkM" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" id="zOI-6T-60G"/>
+                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" constant="61" id="5gA-5e-8HU"/>
+                <constraint firstAttribute="bottom" secondItem="KvY-uW-dkM" secondAttribute="bottom" constant="322" id="HiV-e1-Paj"/>
+                <constraint firstItem="KvY-uW-dkM" firstAttribute="top" secondItem="IG8-OH-BQd" secondAttribute="top" id="REg-Mx-sfh"/>
+                <constraint firstItem="9Hg-Lc-7yX" firstAttribute="leading" secondItem="KvY-uW-dkM" secondAttribute="leading" id="Xih-pc-Qt4"/>
+                <constraint firstItem="KvY-uW-dkM" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" id="dcd-P6-XyL"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="centerX" secondItem="9Hg-Lc-7yX" secondAttribute="centerX" id="fGb-92-uTw"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="bottom" secondItem="IG8-OH-BQd" secondAttribute="bottomMargin" id="h5L-OT-fyy"/>
+                <constraint firstItem="KvY-uW-dkM" firstAttribute="trailing" secondItem="9Hg-Lc-7yX" secondAttribute="trailing" id="mlq-6T-tiJ"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="top" secondItem="9Hg-Lc-7yX" secondAttribute="bottom" constant="14" id="uH3-CE-nVU"/>
+                <constraint firstItem="krZ-F2-PED" firstAttribute="leading" secondItem="IG8-OH-BQd" secondAttribute="leading" constant="37" id="uLW-0p-YR5"/>
+                <constraint firstAttribute="trailing" secondItem="KvY-uW-dkM" secondAttribute="trailing" id="wZj-O3-L3K"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
